# orderhub-api-gateway/internal/router/router.go
@@ -44,5 +44,11 @@ func Router(authClient *auth.Client, log *zap.Logger) *gin.Engine {
 	// защищаем logout валидным access-токеном
 	auth.POST("/logout", middleware.AuthRequired(authClient, log), authHandler.Logout)
 
+	// email verification
+	// Публичное подтверждение по коду
+	r.POST("/api/v1/auth/email/verification/confirm", authHandler.ConfirmEmailVerification)
+	// Повторная отправка письма — только для авторизованных
+	auth.POST("/email/verification/request", middleware.AuthRequired(authClient, log), authHandler.RequestEmailVerification)
+
 	return r
 }
